<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="24dp"
    android:paddingBottom="24dp">

    <!-- Back Arrow -->
    <ImageView
        android:id="@+id/imageViewBackArrow"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/back_icon2"
        android:layout_marginStart="5dp"
        android:clickable="true"
        android:onClick="onBackArrowClick"
        android:contentDescription="Back Arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true" />

    <ImageView
        android:id="@+id/imageContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBackArrow"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_contact"
        />

    <!-- Contact Section -->
    <TextView
        android:id="@+id/contactTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contact Us"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageContact"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/contactInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="For any queries, contact us at:\nEmail: counseling@example.com\nPhone: +123456789"
        android:textSize="18sp"
        android:lineSpacingExtra="8sp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/contactTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- FAQ Section -->
    <TextView
        android:id="@+id/faqTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Frequently Asked Questions"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/contactInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/faqContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/faq_question_1"
        android:textSize="18sp"
        android:lineSpacingExtra="8sp"
        android:textColorLink="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/faqTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/faqContent2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/faq_question_2"
        android:textSize="18sp"
        android:lineSpacingExtra="8sp"
        android:textColorLink="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/faqContent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/faqContent3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/faq_question_3"
        android:textSize="18sp"
        android:lineSpacingExtra="8sp"
        android:textColorLink="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/faqContent2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/faqContent4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/faq_question_4"
        android:textSize="18sp"
        android:lineSpacingExtra="8sp"
        android:textColorLink="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/faqContent3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/faqContent5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/faq_question_5"
        android:textSize="18sp"
        android:lineSpacingExtra="8sp"
        android:textColorLink="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/faqContent4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

